# gatt-server

./: CMakeLists.txt  package.xml
include/: Gobbledegook.h
src/: GattCharacteristic.cpp  GattCharacteristic.h  GattDescriptor.cpp  GattDescriptor.h  GattInterface.cpp  GattInterface.h  Gobbledegook.cpp  Init.cpp  Mgmt.cpp  Mgmt.h  Server.cpp  ServerUtils.cpp  standalone.cpp  standalone.cxx
